--- a/assignment 4.html
+++ b/assignment 4.html
@@ -13,9 +13,9 @@
     </head>
     <body>
         <h1 style="color: white; background-color: darkblue;"><marquee behavior="scroll" direction="right" scrollamount="17"><img src="image/Logo.jpg" alt="Assignment" height="80px">សូមស្វាគមន៍! IT Women in College of Science and Technology</marquee></h1>
-        <img src="C:\Users\Lenovo\Desktop\html ass\photo_2023-11-03_09-54-27.jpg" width="33%">
-        <img src="C:\Users\Lenovo\Desktop\html ass\photo_2023-11-03_09-54-28 (2).jpg" width="33%">
-        <img src="C:\Users\Lenovo\Desktop\html ass\photo_2023-11-03_09-54-28.jpg" width="33%">
+        <img src="html ass.jpg" width="33%">
+        <img src="html ass.jpg" width="33%">
+        <img src="html ass.jpg" width="33%">
 
         <p style="font-size: 28px;">សូមស្វាគមន៍៍មកកាន់មហាវិទ្យាល័យវិទ្យាសាស្រ្ត និងបច្ចេកវិទ្យានៃសាកលវិទ្យាល័យកម្ពុជា។ សម្រាប់ប្អូនៗសិស្សានុសិស្ស ដែលមានបំណងចង់បន្តការសិក្សាថ្នាក់បរិញ្ញបត្ររង និងថ្នាក់បរិញ្ញាបត្រ។ សូមចុះឈ្មោះជាមួយយើងឥឡូវនេះមក ឬមួយក៏កាន់សាកលវិទ្យាល័យផ្ទាល់ក៏បាន។</p>
         <p style="font-size: 28px;">Welcome to College of Science and Technology of The University. For everyone who wishes to pursue for any AA and BA degrees of the study programs, please register now or visit the campus of the University.</p>
@@ -45,10 +45,10 @@
         </table>
 
         <h1 style="background-color: darkblue; color: white; font-size: 35px;">College of Science and Technology Computer Lab</h1>
-        <img src="C:\Users\Lenovo\Desktop\html ass\photo_2023-11-03_09-54-28 (3).jpg" width="49.8%">
-        <img src="C:\Users\Lenovo\Desktop\html ass\photo_2023-12-01_10-44-04.jpg" width="49.8%">
-        <img src="C:\Users\Lenovo\Desktop\html ass\photo_2023-12-01_10-44-02.jpg" width="49.8%">
-        <img src="C:\Users\Lenovo\Desktop\html ass\photo_2023-12-01_10-44-00.jpg" width="49.8%">
+        <img src="html ass.jpg" width="49.8%">
+        <img src="html ass.jpg" width="49.8%">
+        <img src="html ass.jpg" width="49.8%">
+        <img src="html ass.jpg" width="49.8%">
 
         <br>
         <table style="width: 100%;">
